[package]
name = "max7219-dot-matrix"
version = "0.2.0"
authors = ["David Haig <david@ninjasource.com>"]
edition = "2024"
repository = "https://github.com/ninjasource/max7219-dot-matrix-async.git"
license = "Apache-2.0"
categories = ["embedded", "no-std"]
keywords = ["max7219", "led-matrix"]
description = "Rust driver for the max7219 connected to a 8x8 dot matrix led chip"

[dependencies]
embedded-hal-async = { version = "1.0" }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
